--- a/assets/front/assets/stylesheets/main.css
+++ b/assets/front/assets/stylesheets/main.css
@@ -338,6 +338,7 @@ img.aligncenter { display:block; margin-left:auto; margin-right:auto; margin-bot
 
 .logo a{
    display: inline-block;
+   margin-right: 40px;
 }
 
 .logo .awards{
